Enhanced swagger JWT security and API access control, applied global bearerAuth and secured (cart, wishlist and address) endpoints and marked public auth APIs correctly in Swagger